--- a/pages/Linktree.html
+++ b/pages/Linktree.html
@@ -16,13 +16,11 @@
 </head>
 <body>
     <div class="hello container-center">
-        <h2>HEJ! TUTAJ</h2>
-        <h1>KLAUDIA EUFORIA</h1>
-        <p>...jestem tu, aby motywować i pomagać kobietom osiągać swoje cele. Ze mną nauczysz się działać efektywnie i zaczniesz już teraz, z tym co masz.</p>
-    </div>
-
-    <div class="fixed-bottom-image">
-
+        <div class="hello1">
+            <h2>HEJ! TUTAJ</h2>
+            <h1>KLAUDIA EUFORIA</h1>
+            <p>...jestem tu, aby motywować i pomagać kobietom osiągać swoje cele. Ze mną nauczysz się działać efektywnie i zaczniesz już teraz, z tym co masz.</p>
+        </div>
     </div>
 
     <div class="photo container-center">
