--- a/pages/Rakietki_Rozwoju.html
+++ b/pages/Rakietki_Rozwoju.html
@@ -230,7 +230,7 @@
         <div class="wrapper">
             <div class="footer">
                 <div class="logo">
-                    <a href="Kochana_Rzadzisz_home.html"><img src="../assets/STRONA KLAUDII/logo_Kochana_Rządzisz.svg" alt="Logo Kochana Rządzisz"></a>
+                    <a href="../Kochana_Rzadzisz_home.html"><img src="../assets/STRONA KLAUDII/logo_Kochana_Rządzisz.svg" alt="Logo Kochana Rządzisz"></a>
                 </div>
             </div>
         </div>
