--- a/pages/Motywujace_Cytaty.html
+++ b/pages/Motywujace_Cytaty.html
@@ -56,7 +56,7 @@
     </header>
 
     <div class="flex-container hello wrapper">
-        <h1>MOTYWUJĄCE CYCATY</h1>
+        <h1>MOTYWUJĄCE CYTATY</h1>
         <p>Cytaty, które mogą Cię zainspirować do działania. Może odnajdziesz tu swoje motto?</p>
     </div>
 
